--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ html, body {
 	margin: 0;
 }
 
-.search {
+#search {
 	position: relative;
 	margin: 3em auto;
 	width: 46em;
@@ -15,7 +15,7 @@ html, body {
 	text-align: center;
 }
 
-#qfield {
+#search input {
 	display: block;
 	outline: none;
 	border: none;
@@ -41,14 +41,14 @@ html, body {
 
 
 
-.favorites {
+#favorites {
 	list-style-type: none;
 	margin: 0;
 	padding: 1em;
 	text-align: center;
 }
 
-.favorites li {
+#favorites li {
 	position: relative;
 	display: inline-block;
 	width: 10em;
@@ -57,7 +57,7 @@ html, body {
 	margin: 1em;
 }
 
-.favorites li > a {
+#favorites li > a {
 	position: absolute;
 	top: 0; left: 0;
 	display: inline-block;
@@ -77,12 +77,12 @@ html, body {
 	transition: all 0.3s;
 }
 
-.favorites li > a:hover {
+#favorites li > a:hover {
 	top: 1px;
 	box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 }
 
-.favorites li > a > img {
+#favorites li > a > img {
 	width: 100%;
 	height: 100%;
 }
